--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -13,9 +10,6 @@ jobs:
   build:
 
     runs-on: windows-latest
-    defaults:
-      run:
-        working-directory: ./ICT3101_Calculator
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -23,12 +17,10 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./ICT3101_Calculator/ICT3101_Calculator.sln
     - name: Build
-      run: dotnet build --no-restore
-    - name: NUnit Tests
-      working-directory: ICT3101_Calculator.UnitTests/
-      run: dotnet test --no-build --verbosity normal
-    - name: SpecFlow Tests
-      working-directory: SpecFlowCalculatorTests/
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build ./ICT3101_Calculator/ICT3101_Calculator.sln --no-restore
+    - name: Run Unit Tests
+      run: dotnet test ./ICT3101_Calculator/ICT3101_Calculator.UnitTests/ICT3101_Calculator.UnitTests.csproj --no-build --verbosity normal
+    - name: Run SpecFlow Tests
+      run: dotnet test ./ICT3101_Calculator/SpecFlowCalculatorTests/SpecFlowCalculatorTests.csproj --no-build --verbosity normal
