--- a/ICT3101_Calculator/ICT3101_Calculator/ICT3101_Calculator.csproj
+++ b/ICT3101_Calculator/ICT3101_Calculator/ICT3101_Calculator.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="MagicNumbers.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="MagicNumbers.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
